# apacenye

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  DEV_LOG.md  pyproject.toml
.claude/skills/add-strategy-worker/: SKILL.md
.claude/skills/dev-cycle/: SKILL.md
.claude/skills/onboard-data-source/: SKILL.md
.claude/skills/operate-paper/: SKILL.md
.claude/skills/review-calibration/: SKILL.md
.claude/skills/review-risk-pre-live/: SKILL.md
.claude/skills/run-backtest/: SKILL.md
.claude/skills/triage-idea/: SKILL.md
config/: risk.yaml
config/strategies/: w1.yaml
docs/: GUIDE.md  SCHEMAS.md
docs/initial-bootstrap/: ABOUT_ME.md  STAGE1.md  STAGE2.md  STAGE3.md  STAGE4.md  STAGE5.md
docs/initial-bootstrap/handoffs/: stage1-foundations.md  stage2-strategies.md  stage3-architecture.md  stage4-conventions-summary.md  stage5-WIP-resume.md  stage5-implementation-log.md
docs/plans/: B4-PLAN.md  B6-PLAN.md  B7-PLAN.md
docs/strategies/: w1.md
research/: estimate_sigma_w1.py  sigma_w1_study.json
src/apacenye/: backup.py  cli.py  config.py  scheduler.py
src/apacenye/backtest/: capture.py  replay.py
src/apacenye/checkpoint/: ack.py
src/apacenye/contract/: __init__.py  models.py
tests/: test_backlog_schema.py  test_backup.py  test_calibration.py  test_catalog.py  test_checkpoint.py  test_fees.py  test_ledger.py  test_metar_capture.py  test_orchestrator.py  test_paper_execution.py  test_pnl.py  test_replay.py  test_risk_engine.py  test_sigma_study.py  test_sizing.py  test_w1_worker.py  test_weather_model.py
tests/golden/: calibration_w1.txt
(+32 files in other folders)
