[project]
name = "apacenye"
version = "0.1.0"
description = "Apacenyë — personal Kalshi trading platform (PAPER-ONLY bootstrap; live hard-disabled)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "websockets>=12.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "cryptography>=42.0",
    "pyyaml>=6.0",
]

[project.scripts]
apacenye = "apacenye.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apacenye"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
